@@ -253,3 +253,5 @@
 	'src/wh/whhttpserver.cpp' and 'src/wh/whhttpserver.h'.
 2016-02-26 Fred Gleason <fredg@paravelsystems.com>
 	* Refactored the test cases into separate directories under 'test/'.
+2016-02-26 Fred Gleason <fredg@paravelsystems.com>
+	* Added a WebSockets test in 'src/tests/sockettest/'.
